--- a/about-page.html
+++ b/about-page.html
@@ -29,7 +29,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background" style="background: radial-gradient(800px 1200px at bottom right, #bfeafc, #84b2d7);">
+  <body>
+  <!--   <body class="background" style="background: radial-gradient(800px 1200px at bottom right, #bfeafc, #84b2d7);"> -->
 
   <!-- CURSOR STARTS HERE -->
     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
@@ -62,24 +63,24 @@
         <!-- EXPERIENCE -->
         <div class="about-title">Experience</div>
         <div class="about-body">
-          The Design Kids Award Winner (2019)<br>
-          <span class="about-body-desc">
-            Check out the full interview <a href="https://bit.ly/33y1oAa" target="_blank" class="about-body-desc-link">here!</a></span>
+          The Design Kids Award Winner <span class="jobdate">(2019)</span><br>
+          <div class="about-body-desc">
+            Check out the full interview <a href="https://bit.ly/33y1oAa" target="_blank" class="about-body-desc-link">here!</a></div>
           <br><br>
 
-          Junior Digital Designer full time at Sand & Sky  (Jan 2020 – Present)<br>
-          Graphic Designer part time at Sand & Sky  (Dec 2018 – Jan 2020)<br>
-          Graphic Design Intern at Sand & Sky  (Aug 2018 – Nov 2018)<br>
-          <span class="about-body-desc">
-            Sand & Sky is a no-worries skincare brand that works with clean, effective, lovely-to-use formulas. It is a brand under a rapidly growing Social E-Commerce company, Supernova, creating innovative Health, Beauty and Fitness products from the ground up.</span>
+          Junior Digital Designer full time at Sand & Sky <span class="jobdate">(Jan 2020 – Present)</span><br>
+          Graphic Designer part time at Sand & Sky <span class="jobdate">(Dec 2018 – Jan 2020)</span><br>
+          Graphic Design Intern at Sand & Sky <span class="jobdate">(Aug 2018 – Nov 2018)</span><br>
+          <div class="about-body-desc">
+            Sand & Sky is a no-worries skincare brand that works with clean, effective, lovely-to-use formulas. It is a brand under a rapidly growing Social E-Commerce company, Supernova, creating innovative Health, Beauty and Fitness products from the ground up.</div>
           <br><br>
 
-          PPIA Victoria Internal Creative (Dec 2018 – Oct 2019)<br>
-          <span class="about-body-desc">
-            PPIA Victoria is a student organisation which embodies all of the Indonesian students’ unions in the state of Victoria, Australia. It affiliates with the Indonesian Students’ Association of Australia.</span>
+          PPIA Victoria Internal Creative <span class="jobdate">(Dec 2018 – Oct 2019)</span><br>
+          <div class="about-body-desc">
+            PPIA Victoria is a student organisation which embodies all of the Indonesian students’ unions in the state of Victoria, Australia. It affiliates with the Indonesian Students’ Association of Australia.</div>
           <br><br>
 
-          Graphic designer & focus group facilitator (2018)<br>
+          Graphic designer & focus group facilitator <span class="jobdate">(2018)</span><br>
           <span class="about-body-desc">
             Under a project with Monash University for NEAMI</span>
         </div>
