--- a/index.html
+++ b/index.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Alma Santang</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/FAVICON/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/FAVICON/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/FAVICON/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/FAVICON/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/FAVICON/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/FAVICON/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/FAVICON/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/FAVICON/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/FAVICON/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/FAVICON/android-icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/FAVICON/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/FAVICON/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/FAVICON/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/FAVICON/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/FAVICON/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <link rel="manifest" href="assets/images/FAVICON/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
     <link rel="stylesheet" href="assets/css/homepage.css" type="text/css">
@@ -49,17 +38,17 @@
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
         <div class="bodycopy-hp" style="text-align:center; margin-top:15%"> <span class="wave">👋</span><br>
             Alma is a Naarm/Melbourne based communication designer. More about her
-            <a href="about-page.html"><span class="arrow-header">&#8594;right this way.</span> </a>
+            <a href="about-page.html"><!-- <span class="arrow-header"> -->&#8594; right this way.<!-- </span> --> </a>
             <br>
             Selected projects
-            <span class="arrow-header-2">&#8595;</span> down below.
+            <a href="#projectstartshere">&#8595; down below.</a>
             <br><br>
           </div>
         <!-- HOMEPAGE HEADER COPY ENDS HERE -->      
 
         <!-- HOMEPAGE PROJECTS REEL STARTS HERE --> 
-        <div class="projects">
-            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="25%" style="margin-top:25%; margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
+        <div id="projectstartshere" class="projects">
+            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="25%" style="margin-top:14%;margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
 
             <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic" width="25%" style="margin:3%;"></a>
 
