--- a/about-page.html
+++ b/about-page.html
@@ -70,8 +70,8 @@
           <br><br>
 
           Graphic designer & focus group facilitator <span class="jobdate">(2018)</span><br>
-          <span class="about-body-desc">
-            Under a project with Monash University for NEAMI</span>
+          <div class="about-body-desc">
+            Under a project with Monash University for NEAMI</div>
         </div>
 
         <div class="about-title">Get in touch</div>
