--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
     <div class="grid">
       <div class="col">
-
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
         <div class="bodycopy-hp" style="text-align:center; margin-top:15%"> <span class="wave">👋</span><br>
             Alma is a Naarm/Melbourne based communication designer. More about her
@@ -44,8 +43,12 @@
             <a href="#projectstartshere">&#8595; down below.</a>
             <br><br>
           </div>
-        <!-- HOMEPAGE HEADER COPY ENDS HERE -->      
+        <!-- HOMEPAGE HEADER COPY ENDS HERE -->    
+        </div>  
+      </div>
 
+      <div class="grid">
+        <div class="col">
         <!-- HOMEPAGE PROJECTS REEL STARTS HERE --> 
         <div id="projectstartshere" class="projects">
             <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="25%" style="margin-top:14%;margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
@@ -75,6 +78,8 @@
             <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="20%" style="transform:rotate(-5deg); margin-left:36%; margin-top:3%"></a>
             <br><br><br><br><br><br><br><br><br>
         </div>
+      </div>
+    </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
 
         <!-- PORTFOLIO PUSH STARTS HERE --> 
