logo and homepage update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background" style="background: radial-gradient(400px 450px at top left, pink, transparent), radial-gradient(400px 450px at top right, #bfeafc, white);">
+  <body>
 
   <!-- CURSOR STARTS HERE -->
     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
@@ -28,14 +28,14 @@
 
   <!-- AS LOGO STARTS HERE-->
     <div class="logo-bar" style="text-align:center;">
-      <span class="logo" style="color:black;">Alma Santang</span>
+      <span class="logo" style="color:black;">ALMA SANTANG</span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
     <div class="grid">
       <div class="col">
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
-        <div class="bodycopy-hp" style="text-align:center; margin-top:15%"> <span class="wave">👋</span><br>
+        <div class="bodycopy-hp bodycopy-bg" style="text-align:center;"> <span class="wave">👋</span><br>
             Alma is a Naarm/Melbourne based communication designer. More about her
             <a href="about-page.html"><!-- <span class="arrow-header"> -->&#8594; right this way.<!-- </span> --> </a>
             <br>
@@ -43,40 +43,38 @@
             <a href="#projectstartshere">&#8595; down below.</a>
             <br><br>
           </div>
+        </div>
         <!-- HOMEPAGE HEADER COPY ENDS HERE -->    
-        </div>  
-      </div>
-
-      <div class="grid">
         <div class="col">
         <!-- HOMEPAGE PROJECTS REEL STARTS HERE --> 
         <div id="projectstartshere" class="projects">
-            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="25%" style="margin-top:14%;margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
+            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="35%" style="margin-top:14%;margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
 
-            <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-productnatural.html"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-productnatural.html"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-novus.html"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png" class="pic" width="25%" style="margin:5%;"></a>
+            <a href="project-novus.html"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png" class="pic" width="35%" style="margin:5%;"></a>
 
-            <a href="project-therobinhood.html"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-therobinhood.html"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-agora.html"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-agora.html"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-agw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-agw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic" width="25%" style="margin:3%;"></a>
+            <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic" width="35%" style="margin:3%;"></a>
 
-            <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin:3%;"></a>
+            <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="30%" style="transform:rotate(5deg); margin:3%;border-radius:100%;"></a>
 
-            <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="20%" style="transform:rotate(-5deg); margin-left:36%; margin-top:3%"></a>
+<!--             <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="30%" style="transform:rotate(-5deg); margin-top:3%; border-radius:100%;"></a> -->
             <br><br><br><br><br><br><br><br><br>
+          </div>
         </div>
       </div>
     </div>
@@ -87,9 +85,6 @@
             Going straight to second base? <br> Download her portfolio <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="download-porto">here.</a><br><br>
         </div> -->
         <!-- PORTFOLIO PUSH ENDS HERE --> 
-        
-      </div>
-    </div>
 
 
       
