--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -31,8 +31,8 @@
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar background" style="text-align:center;">
-      <span class="logo" style="color:black; "><a href="index.html" class="logo-nav">Alma Santang</a></span>
+    <div class="logo-bar" style="text-align:center;">
+      <span class="logo"><a href="index.html" class="logo-nav">ALMA SANTANG</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
