testing moti page only

--- a/about-page.html
+++ b/about-page.html
@@ -29,7 +29,7 @@
 
   <!-- AS LOGO STARTS HERE-->
     <div class="logo-bar" style="text-align:center;">
-      <span class="logo" style="color:black;"><a href="index.html" class="logo-nav">Alma Santang</a></span>
+      <span class="logo"><a href="index.html" class="logo-nav">ALMA SANTANG</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
     <div class="alma-pic"><img src="assets/images/pic-alma.jpg"></div>
@@ -76,15 +76,15 @@
 
         <div class="about-title">Get in touch</div>
         <div class="about-body">
-          <a href="mailto: almasantang@gmail.com" target="_blank" class="contact-link">↗Email</a><br>
-          <a href="https://www.linkedin.com/in/almasantang/" target="_blank" class="contact-link">↗LinkedIn</a><br>
-          <a href="https://www.instagram.com/almasantang" target="_blank" class="contact-link">↗Instagram</a><br>
+          <a href="mailto: almasantang@gmail.com" target="_blank" class="contact-link">&#8594; Email</a><br>
+          <a href="https://www.linkedin.com/in/almasantang/" target="_blank" class="contact-link">&#8594; LinkedIn</a><br>
+          <a href="https://www.instagram.com/almasantang" target="_blank" class="contact-link">&#8594; Instagram</a><br>
 <!--           <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
         </div> -->
         <br><br>
       </div>
 
-        <div class="about-title takemehome"> <a href="index.html" class="navigation">✻Take me home</a></div>
+        <div class="about-title takemehome"> <a href="index.html" class="navigation">Take me home</a></div>
         <br><br><br><br><br>
         
         <!-- EXPERIENCE -->     
