--- a/project-moti.html
+++ b/project-moti.html
@@ -35,9 +35,11 @@
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
-    <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
+<div class="navigation">
+    <div class="navigation-home"> <a href="index.html" class="navigation-home">Take me home</a></div>
     <div class="navigation-next"> <a href="project-productnatural.html" class="navigation-next">→Next</a></div>
     <div class="navigation-prev"> <a href="project-checkyourself.html" class="navigation-prev">Prev←</a></div>
+</div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
