--- a/project-alunalun.html
+++ b/project-alunalun.html
@@ -36,10 +36,14 @@
     </div>
   <!-- AS LOGO ENDS HERE -->
 
+
 <!--   NAVIGATION -->
-    <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
+<div class="navigation">a
+    <a href="index.html" class="navigation-home">Home</a>
+ <!--    <div class="navigation-home"> <a href="index.html" class="navigation-home">Take me home</a></div> -->
     <div class="navigation-next"> <a href="project-ssspringfall.html" class="navigation-next">→Next</a></div>
     <div class="navigation-prev"> <a href="project-iffound.html" class="navigation-prev">Prev←</a></div>
+</div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
