--- a/project-agw.html
+++ b/project-agw.html
@@ -34,11 +34,12 @@
     </div>
   <!-- AS LOGO ENDS HERE -->
 
-<!--   NAVIGATION -->
-    <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
+<div class="navigation">a
+    <a href="index.html" class="navigation-home">Home</a>
+ <!--    <div class="navigation-home"> <a href="index.html" class="navigation-home">Take me home</a></div> -->
     <div class="navigation-next"> <a href="project-agora.html" class="navigation-next">→Next</a></div>
     <div class="navigation-prev"> <a href="project-kanyevthepeople.html" class="navigation-prev">Prev←</a></div>
-<!--   NAVIGATION -->
+</div>
 
     <div class="grid background">
       <div class="col background">
