--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -37,8 +37,11 @@
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
-    <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
+<div class="navigation">a
+    <a href="index.html" class="navigation-home">Home</a>
+ <!--    <div class="navigation-home"> <a href="index.html" class="navigation-home">Take me home</a></div> -->
     <div class="navigation-next"> <a href="project-moti.html" class="navigation-next">→Next</a></div>
+</div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
