--- a/project-moti.html
+++ b/project-moti.html
@@ -36,7 +36,7 @@
 
 <!--   NAVIGATION -->
 <div class="navigation">a
-    <a href="index.html" class="navigation-home">Take me home</a>
+    <a href="index.html" class="navigation-home">Home</a>
  <!--    <div class="navigation-home"> <a href="index.html" class="navigation-home">Take me home</a></div> -->
     <div class="navigation-next"> <a href="project-productnatural.html" class="navigation-next">→Next</a></div>
     <div class="navigation-prev"> <a href="project-checkyourself.html" class="navigation-prev">Prev←</a></div>
