background colour on hp update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- AS LOGO STARTS HERE-->
     <div class="logo-bar" style="text-align:center;">
-      <span class="logo" style="color:black;">ALMA SANTANG</span>
+      <span class="logo" style="color:#0e0e0e;">ALMA SANTANG</span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
