--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		<!-- INTRO -->
 		<section class="intro">
 			<div class="showreel">
-		  	<video src="assets/images/showreel/portfolio-showreel-opt.webm" autoplay playsinline loop muted></video>
+				<img src="assets/images/showreel/portfolio-showreel-opt.gif">
+		  	<!-- <video src="assets/images/showreel/portfolio-showreel-opt.mp4" autoplay playsinline loop muted></video> -->
 		  </div>
 		</section>
 		
