update sosmed meta

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 		<link rel="apple-touch-icon" href="assets/images/favicon/iphone-logo.jpg">
 		<meta property="og:title" content="Alma Santang – Design Portfolio">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="___CURRENT_URL___">
+		<meta property="og:url" content="http://www.almasantang.com/">
 		<meta property="og:description" content="Alma Santang is a Naarm / Melbourne based creative. Well versed in many areas of communication design with a focus on visual identity, motion graphics and art direction.">
-		<meta property="og:image" content="___ROOT_HOST___/social-media-share.jpg">
+		<meta property="og:image" content="https://pbs.twimg.com/media/E36SWWyVoAE7QRe?format=jpg&name=medium">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:site_name" content="Alma Santang – Design Portfolio">
+		<meta name="twitter:image:alt" content="Alma Santang Design Portfolio">
 		<link rel="stylesheet" href="assets/css/_base.css">
 		<link rel="stylesheet" href="assets/css/_fonts.css">
 		<link rel="stylesheet" href="assets/css/style.css">
