--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 		<section class="new-layout">
 		  <div class="artwork">
 		    <div class="slideshow-container">
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-2.jpg" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides1"><img src="assets/images/highlight/publication-1.gif" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides1"><img src="assets/images/highlight/publication-3.gif" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-4-4.gif" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-5.jpg" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-6.jpg" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-7.jpg" style="width:100%" loading="lazy"></div>
+		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37Zk6IX0AsQ56P?format=jpg&name=medium" style="width:100%"></div>
+		  		<div class="mySlides1"><img src="assets/images/highlight/publication-1.gif" style="width:100%"></div>
+		  		<div class="mySlides1"><img src="assets/images/highlight/publication-3.gif" style="width:100%"></div>
+		      <div class="mySlides1"><img src="assets/images/highlight/publication-4-4.gif" style="width:100%"></div>
+		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37ZrbEXEAQ3UJS?format=jpg&name=medium" style="width:100%"></div>
+		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37ZxFXWYBQf3xP?format=jpg&name=medium" style="width:100%"></div>
+		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37Z15nWYAUk3Ed?format=jpg&name=medium" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 0)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 0)">&#10555;</a>
 		    	<h2>Publication</h2>
@@ -72,11 +72,11 @@
 		  
 		  <div class="artwork-2">
 		    <div class="slideshow-container">
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-1-1.gif" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides2"><img src="assets/images/highlight/motion-2.gif" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides2"><img src="assets/images/highlight/motion-3.gif" style="width:100%" loading="lazy"></div>    
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-5.gif" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-4.gif" style="width:100%" loading="lazy"></div>
+		      <div class="mySlides2"><img src="assets/images/highlight/motion-1-1.gif" style="width:100%"></div>
+		  		<div class="mySlides2"><img src="assets/images/highlight/motion-2.gif" style="width:100%"></div>
+		  		<div class="mySlides2"><img src="assets/images/highlight/motion-3.gif" style="width:100%"></div>    
+		      <div class="mySlides2"><img src="assets/images/highlight/motion-5.gif" style="width:100%"></div>      
+		      <div class="mySlides2"><img src="assets/images/highlight/motion-4.gif" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 1)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 1)">&#10555;</a>
 		    	<h2>Motion graphics</h2>
@@ -87,15 +87,15 @@
 		<section class="new-layout">
 		  <div class="artwork-3">
 		    <div class="slideshow-container">
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-6.jpg" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-7.jpg" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-8.jpg" style="width:100%" loading="lazy"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-2.gif" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-9.jpg" style="width:100%" loading="lazy"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-3.gif" style="width:100%" loading="lazy"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-4.gif" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-1.gif" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-5.jpg" style="width:100%" loading="lazy"></div>     
+		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37YxEqXEAQM2zA?format=jpg&name=medium" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37Y3yoXIAIDrQH?format=jpg&name=medium" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37Y9UoXEAQQi_V?format=jpg&name=medium" style="width:100%"></div>     
+		      <div class="mySlides3"><img src="assets/images/highlight/brand-2.gif" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37ZD4sXEAEK4Qt?format=jpg&name=medium" style="width:100%"></div>     
+		      <div class="mySlides3"><img src="assets/images/highlight/brand-3.gif" style="width:100%"></div>     
+		      <div class="mySlides3"><img src="assets/images/highlight/brand-4.gif" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="assets/images/highlight/brand-1.gif" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37YcYlXwAo5ILG?format=jpg&name=medium" style="width:100%"></div>     
 		      <a class="prev" onclick="plusSlides(-1, 2)">&#10554;</a>
 		      <a class="next" onclick="plusSlides(1, 2)">&#10555;</a>
 		      <h2>Brand identity</h2>
@@ -154,15 +154,15 @@
 		<section class="new-layout">
 		  <div class="artwork">
 		  	<div class="slideshow-container">
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-11.gif" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-2.gif" style="width:100%" loading="lazy"></div>
-		  	  <div class="mySlides4"><img src="assets/images/highlight/digital-4.gif" style="width:100%" loading="lazy"></div>
-		  	  <div class="mySlides4"><img src="assets/images/highlight/digital-9.jpg" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-6.jpg" style="width:100%" loading="lazy"></div>      
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-7.jpg" style="width:100%" loading="lazy"></div>     
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-8.jpg" style="width:100%" loading="lazy"></div>     
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-1.gif" style="width:100%" loading="lazy"></div>
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-3.gif" style="width:100%" loading="lazy"></div>
+		      <div class="mySlides4"><img src="assets/images/highlight/digital-11.gif" style="width:100%"></div>
+		      <div class="mySlides4"><img src="assets/images/highlight/digital-2.gif" style="width:100%"></div>
+		  	  <div class="mySlides4"><img src="assets/images/highlight/digital-4.gif" style="width:100%"></div>
+		  	  <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37Zeb6XMAkmeMS?format=jpg&name=medium" style="width:100%"></div>      
+		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZNe0WEA0ymjI?format=jpg&name=medium" style="width:100%"></div>      
+		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZNe0WEA0ymjI?format=jpg&name=medium" style="width:100%"></div>     
+		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZYrmXoAUZvLq?format=jpg&name=medium" style="width:100%"></div>     
+		      <div class="mySlides4"><img src="assets/images/highlight/digital-1.gif" style="width:100%"></div>
+		      <div class="mySlides4"><img src="assets/images/highlight/digital-3.gif" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 3)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 3)">&#10555;</a>
 		      <h2>Digital design</h2>
@@ -171,10 +171,10 @@
 		  
 		  <div class="artwork-2">
 		  	<div class="slideshow-container">
-		      <div class="mySlides5"><img src="assets/images/highlight/self-1.jpg" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides5"><img src="assets/images/highlight/self-2.jpg" style="width:100%" loading="lazy"></div>
-		  		<div class="mySlides5"><img src="assets/images/highlight/self-3.jpg" style="width:100%" loading="lazy"></div>   
-		      <div class="mySlides5"><img src="assets/images/highlight/self-4.gif" style="width:100%" loading="lazy"></div>
+		      <div class="mySlides5"><img src="https://pbs.twimg.com/media/E37Z8ONWUAAiY27?format=jpg&name=medium" style="width:100%"></div>
+		  		<div class="mySlides5"><img src="https://pbs.twimg.com/media/E37aD2TXoAwRW1I?format=jpg&name=medium" style="width:100%"></div>
+		  		<div class="mySlides5"><img src="https://pbs.twimg.com/media/E37aIBbWYAEgakA?format=jpg&name=medium" style="width:100%"></div>   
+		      <div class="mySlides5"><img src="assets/images/highlight/self-4.gif" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 4)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 4)">&#10555;</a>
 		      <h2>Self exploration</h2>
