--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 		  <div class="artwork">
 		    <div class="slideshow-container">
 		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37Zk6IX0AsQ56P?format=jpg&name=medium" style="width:100%"></div>
-		  		<div class="mySlides1"><img src="assets/images/highlight/publication-1.gif" style="width:100%"></div>
-		  		<div class="mySlides1"><img src="assets/images/highlight/publication-3.gif" style="width:100%"></div>
-		      <div class="mySlides1"><img src="assets/images/highlight/publication-4-4.gif" style="width:100%"></div>
+		  		<div class="mySlides1"><img src="https://64.media.tumblr.com/412df515a3437df4c19e033cabad7249/b04f3765726dc20e-32/s2048x3072/e376714fad3591dcff9aa15b4b3dcf46afc3dc63.gifv" style="width:100%"></div>
+		  		<div class="mySlides1"><img src="https://64.media.tumblr.com/a365a31b53b742130b702040dd32e7ee/b04f3765726dc20e-0c/s1280x1920/15b8cc4d38a4241e328dc5a55e069c81e278d4ce.gifv" style="width:100%"></div>
+		      <div class="mySlides1"><img src="https://64.media.tumblr.com/24aac8d6b6e9ad28bbeea795f0b36b0c/b04f3765726dc20e-be/s2048x3072/eaa7434f01de428a9eca829bef9dcf6235d72d24.gifv" style="width:100%"></div>
 		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37ZrbEXEAQ3UJS?format=jpg&name=medium" style="width:100%"></div>
 		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37ZxFXWYBQf3xP?format=jpg&name=medium" style="width:100%"></div>
 		      <div class="mySlides1"><img src="https://pbs.twimg.com/media/E37Z15nWYAUk3Ed?format=jpg&name=medium" style="width:100%"></div>
@@ -72,11 +72,11 @@
 		  
 		  <div class="artwork-2">
 		    <div class="slideshow-container">
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-1-1.gif" style="width:100%"></div>
-		  		<div class="mySlides2"><img src="assets/images/highlight/motion-2.gif" style="width:100%"></div>
-		  		<div class="mySlides2"><img src="assets/images/highlight/motion-3.gif" style="width:100%"></div>    
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-5.gif" style="width:100%"></div>      
-		      <div class="mySlides2"><img src="assets/images/highlight/motion-4.gif" style="width:100%"></div>
+		      <div class="mySlides2"><img src="https://64.media.tumblr.com/af40ef4c9f1e95507ff9a84196935821/97df1fff2d5e4e89-cf/s2048x3072/24ad565368629d2e5885dabd7824989dad16a852.gifv" style="width:100%"></div>
+		  		<div class="mySlides2"><img src="https://64.media.tumblr.com/8c940e08cd785bea695684eca6f69da1/97df1fff2d5e4e89-7d/s1280x1920/f6e3ce637603ff0ecc1a2463e3b87cde980440b9.gifv" style="width:100%"></div>
+		  		<div class="mySlides2"><img src="https://64.media.tumblr.com/c325d4aca96b23bdda026c7e4c0a39b6/97df1fff2d5e4e89-47/s1280x1920/235f89a1e96866da515fb9a69fbd9217bc6c0347.gifv" style="width:100%"></div>    
+		      <div class="mySlides2"><img src="https://64.media.tumblr.com/baaa95be5d815dedb7b85c30ae61ce29/97df1fff2d5e4e89-cc/s2048x3072/88e8c3c1b74928f0cbef047a47e4ec42b8a4bcc5.gifv" style="width:100%"></div>      
+		      <div class="mySlides2"><img src="https://64.media.tumblr.com/bb50f2b1496f8acaa84dfb9cfe9357b6/97df1fff2d5e4e89-cb/s1280x1920/d918f26c555f7eb98eb944f72c99e8fde095142a.gifv" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 1)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 1)">&#10555;</a>
 		    	<h2>Motion graphics</h2>
@@ -90,11 +90,11 @@
 		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37YxEqXEAQM2zA?format=jpg&name=medium" style="width:100%"></div>      
 		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37Y3yoXIAIDrQH?format=jpg&name=medium" style="width:100%"></div>      
 		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37Y9UoXEAQQi_V?format=jpg&name=medium" style="width:100%"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-2.gif" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://64.media.tumblr.com/c59e5a77212fde53a5366a4fd389483a/7d6009d024f28395-ec/s1280x1920/b32f2f44c20f51520ca60e55bb1d47a31e33454e.gifv" style="width:100%"></div>      
 		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37ZD4sXEAEK4Qt?format=jpg&name=medium" style="width:100%"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-3.gif" style="width:100%"></div>     
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-4.gif" style="width:100%"></div>      
-		      <div class="mySlides3"><img src="assets/images/highlight/brand-1.gif" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://64.media.tumblr.com/c68f2c052aace1d62a985c18f897ff02/8cebaad98885814f-8b/s1280x1920/1b2543ae34fdf26cdc3ba86a1cdad1c7f78862a4.gifv" style="width:100%"></div>     
+		      <div class="mySlides3"><img src="https://64.media.tumblr.com/ac9feb9c333207c7739fd7eddc443dc3/8cebaad98885814f-5e/s1280x1920/2c79530e1666c5383011c702ce49e2039c109439.gifv" style="width:100%"></div>      
+		      <div class="mySlides3"><img src="https://64.media.tumblr.com/787c26a63f440e350df95f749cf38352/97bfa6f050d1ea62-97/s1280x1920/db4a285ee080e95c49d1c95b7b9e7402aabcacd4.gifv" style="width:100%"></div>      
 		      <div class="mySlides3"><img src="https://pbs.twimg.com/media/E37YcYlXwAo5ILG?format=jpg&name=medium" style="width:100%"></div>     
 		      <a class="prev" onclick="plusSlides(-1, 2)">&#10554;</a>
 		      <a class="next" onclick="plusSlides(1, 2)">&#10555;</a>
@@ -154,15 +154,15 @@
 		<section class="new-layout">
 		  <div class="artwork">
 		  	<div class="slideshow-container">
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-11.gif" style="width:100%"></div>
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-2.gif" style="width:100%"></div>
-		  	  <div class="mySlides4"><img src="assets/images/highlight/digital-4.gif" style="width:100%"></div>
+		      <div class="mySlides4"><img src="https://64.media.tumblr.com/347763a78f27bfeec458081033a791a7/97df1fff2d5e4e89-66/s2048x3072/01a8b99f40fdd501ce42aa2b9a2f18b6f403da78.gifv" style="width:100%"></div>
+		      <div class="mySlides4"><img src="https://64.media.tumblr.com/735c1689b7005e55b781398616abc2f2/55104d3388185d5f-6e/s2048x3072/7cf84a78dfcb81b517e43b2ba6127eb3783161ec.gifv" style="width:100%"></div>
+		  	  <div class="mySlides4"><img src="https://64.media.tumblr.com/82c51ac92eff5113ae341d71aac34172/55104d3388185d5f-80/s2048x3072/1a709b760e89d54633a0f5059498fdd708a6071f.gifv" style="width:100%"></div>
 		  	  <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37Zeb6XMAkmeMS?format=jpg&name=medium" style="width:100%"></div>      
 		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZNe0WEA0ymjI?format=jpg&name=medium" style="width:100%"></div>      
 		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZNe0WEA0ymjI?format=jpg&name=medium" style="width:100%"></div>     
 		      <div class="mySlides4"><img src="https://pbs.twimg.com/media/E37ZYrmXoAUZvLq?format=jpg&name=medium" style="width:100%"></div>     
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-1.gif" style="width:100%"></div>
-		      <div class="mySlides4"><img src="assets/images/highlight/digital-3.gif" style="width:100%"></div>
+		      <div class="mySlides4"><img src="https://64.media.tumblr.com/08afbf442fce5aa0489e60d35b57bb89/55104d3388185d5f-13/s1280x1920/603d14139707e1aae2049befbc86afb9002ebd44.gifv" style="width:100%"></div>
+		      <div class="mySlides4"><img src="https://64.media.tumblr.com/cfaf663c0de11eb64dba5d34341f5cf0/55104d3388185d5f-67/s2048x3072/b488e6ffb08a7db19262c57d282f1bdb48fbc8d8.gifv" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 3)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 3)">&#10555;</a>
 		      <h2>Digital design</h2>
@@ -174,7 +174,7 @@
 		      <div class="mySlides5"><img src="https://pbs.twimg.com/media/E37Z8ONWUAAiY27?format=jpg&name=medium" style="width:100%"></div>
 		  		<div class="mySlides5"><img src="https://pbs.twimg.com/media/E37aD2TXoAwRW1I?format=jpg&name=medium" style="width:100%"></div>
 		  		<div class="mySlides5"><img src="https://pbs.twimg.com/media/E37aIBbWYAEgakA?format=jpg&name=medium" style="width:100%"></div>   
-		      <div class="mySlides5"><img src="assets/images/highlight/self-4.gif" style="width:100%"></div>
+		      <div class="mySlides5"><img src="https://64.media.tumblr.com/ae70d06eff6a935087f0fde74d557bcb/0c5af8128e459c23-e1/s1280x1920/afc2296401d3d475fde31d50e4b0b0c687e29229.gifv" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 4)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 4)">&#10555;</a>
 		      <h2>Self exploration</h2>
