--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- INTRO -->
 		<section class="intro">
 			<div class="showreel">
-				<img src="assets/images/showreel/portfolio-showreel-opt.gif">
+				<img src="https://64.media.tumblr.com/cfd870f52c0a32f6501d35d2b2ce144a/cd5c7518571cab20-6c/s1280x1920/953dc3adfb948b9e8c6b5940eba4dca802c1cdce.gifv">
 		  	<!-- <video src="assets/images/showreel/portfolio-showreel-opt.mp4" autoplay playsinline loop muted></video> -->
 		  </div>
 		</section>
