--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 		<link rel="stylesheet" href="assets/css/_fonts.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<script src="assets/js/main.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-R6H0WBC5S4"></script>
+		<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-R6H0WBC5S4');
+		</script>
 	</head>
 
 
