--- a/digital-design-portfolio.html
+++ b/digital-design-portfolio.html
@@ -36,7 +36,7 @@
 
 	<body>
 		<header>
-		  <a href="digi-porto.html" class="logotype">ALMA SANTANG</a>
+		  <a href="digital-design-portfolio.html" class="logotype">ALMA SANTANG</a>
 		<!--    <nav> -->
 		     <div class="nav topnav" id="myTopnav">
 		      <a href="digi-porto.html" class="selected">PORTFOLIO</a>
