--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" href="assets/images/favicon/iphone-logo.jpg">
 		<meta property="og:title" content="Alma Santang – Contact Me">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="___CURRENT_URL___">
+		<meta property="og:url" content="http://www.almasantang.com/contact">
 		<meta property="og:description" content="Alma Santang is a Naarm / Melbourne based creative. Well versed in many areas of communication design with a focus on visual identity, motion graphics and art direction.">
 		<meta property="og:image" content="___ROOT_HOST___/social-media-share.jpg">
 		<link rel="stylesheet" href="assets/css/_base.css">
