--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<!--    <nav> -->
 		     <div class=" nav topnav" id="myTopnav">
 		      <a href="index.html" class="selected">PORTFOLIO</a>
-		    	<a href="#infostartshere">INFO</a>
+		    	<a href="#info">INFO</a>
 		    	<a href="contact.html">CONTACT</a>
 		     </div>
 		<!--   </nav> -->
@@ -115,7 +115,7 @@
 		<!-- PROJECT HIGHLIGHT 1 ENDS HERE -->
 		
 		<!-- INFO STARTS HERE -->
-		<section class="important" id="infostartshere">
+		<section class="important" id="info">
 		   <div class="info-1">
 				<h1>INFO</h1>
 		  		<p>
