adding link to public site

--- a/digital-design-portfolio.html
+++ b/digital-design-portfolio.html
@@ -40,6 +40,7 @@
 		<!--    <nav> -->
 		     <div class="nav topnav" id="myTopnav">
 		      <a href="digi-porto.html" class="selected">PORTFOLIO</a>
+		      <a href="index.html" target="blank">PUBLIC SITE</a>
 		    	<a href="contact.html">CONTACT</a>
 		     </div>
 		<!--   </nav> -->
