--- a/digital-design-portfolio.html
+++ b/digital-design-portfolio.html
@@ -39,7 +39,7 @@
 		  <a href="digital-design-portfolio.html" class="logotype">ALMA SANTANG</a>
 		<!--    <nav> -->
 		     <div class="nav topnav" id="myTopnav">
-		      <a href="index.html" target="blank">PUBLIC SITE</a>
+		      <a href="index.html" target="blank">GO TO PUBLIC SITE</a>
 		     </div>
 		<!--   </nav> -->
 		</header>
