--- a/digital-design-portfolio.html
+++ b/digital-design-portfolio.html
@@ -72,7 +72,7 @@
 				<h1>INFO</h1>
 		  		<p>
 		        Hi & thanks for being here. My name’s <span class="alma">Alma,</span> an
-		        Indonesian creative currently based in Naarm / Melbourne. I am well skilled in many areas of communication design through my Bachelor of Design degree that I completed at Monash University,
+		        Indonesian based creative with clients from Indonesia & Australia. I am well skilled in many areas of communication design through my Bachelor of Design degree that I completed at Monash University,
 		        combined with my 2+ years experience working in the industry.
 		        <br><br>
 		        This page is designed & built specifically for my experience in digital design. I’m currently with the leading e-commerce brand Sand & Sky, working closely with the creative lead and the design team, I help translate and deliver their brand messaging to the markets in an exciting way through design.
@@ -257,7 +257,7 @@
 		  <br>
 		  Website designed & developed by Alma Santang.
 		  <br>
-		  (Last updated: 22/06/21)</p>
+		  (Last updated: 22/10/21)</p>
 		</footer>
 		
 		
