--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		
 		<section class="about" id="portfoliostartshere">
 		  <div class="alma-description">
-		    <span class="alma">Alma Santang</span> is a Naarm / Melbourne based creative. Well versed in many areas of
+		    <span class="alma">Alma Santang</span> is an Australia/ Indonesia based creative. Well versed in many areas of
 		    communication design with a focus on visual identity, motion graphics and art
 		    direction.
 		  </div>
@@ -120,7 +120,7 @@
 				<h1>INFO</h1>
 		  		<p>
 		        Hi & thanks for being here. My name’s <span class="alma">Alma,</span> an
-		        Indonesian creative currently based in Naarm / Melbourne. I am well skilled in
+		        Indonesian based creative with clients from Indonesia & Australia. I am well skilled in
 		        many areas of communication design
 		        through my Bachelor of Design degree that I completed at Monash University,
 		        combined with my 2+ years experience working in the industry.
@@ -175,7 +175,7 @@
 		      <div class="mySlides4"><img src="assets/images/highlight/digital-3.gif" style="width:100%"></div>
 		  		<a class="prev" onclick="plusSlides(-1, 3)">&#10554;</a>
 		  		<a class="next" onclick="plusSlides(1, 3)">&#10555;</a>
-		      <h2>Digital design</h2>
+		      <h2>Digital design <a class="seemore" href="https://www.almasantang.com/digital-design-portfolio.html" target="blank">(see more here)</a></h2>
 		    </div>
 		  </div>
 		  
@@ -266,7 +266,7 @@
 		  <br>
 		  Website designed & developed by Alma Santang.
 		  <br>
-		  (Last updated: 14/06/21)</p>
+		  (Last updated: 22/10/21)</p>
 		</footer>
 		
 		
