new footer - UPDATE

--- a/contact.html
+++ b/contact.html
@@ -80,11 +80,12 @@
 		<!-- CIRCLE -->
 		
 		
-		<!-- END PROMO & SOCIALS STARTS HERE -->
+		<!-- END PROMO & SOCIAL STARTS HERE -->
 		<section class="end">
 		  <div class="end-promo">
 		    <p>
-		      I’m always happy to discuss future work opportunity to help you transform your brand. Let’s collaborate. Available Monday-Friday, 9am-6pm Melbourne, Australia time.
+		      I’m always happy to discuss future work opportunity to help you transform your
+		      brand. Let’s collaborate. Available Monday-Friday. <br>(The projects shown are selected projects only)
 		    </p>
 		  </div>
 		  
@@ -93,18 +94,18 @@
 		    <a href="https://www.instagram.com/almasantang" class="social-link" target="blank">Instagram</a>
 		    <a href="https://www.linkedin.com/in/almasantang/" class="social-link" target="blank">LinkedIn</a>
 		    <p>
-		      <br>Melbourne, Victoria<br>Australia
+		      <br>Indonesia / Australia<br>
 		    </p>
 		  </div>
 		  </section>
 		<!-- END PROMO & SOCIAL ENDS HERE -->
-		
+
 		<footer>
 		   © 2021 Alma Santang. All rights reserved.
 		  <br>
-		  Website designed & developed by Alma Santang
+		  Website designed & developed by Alma Santang.
 		  <br>
-		  (Last updated: 09/07/21)</p>
+		  (Last updated: 03/12/21)</p>
 		</footer>
 	</body>
 </html>
