--- a/index copy.html
+++ b/index copy.html
@@ -20,7 +20,9 @@
 		<link rel="stylesheet" href="assets/css/_base.css">
 		<link rel="stylesheet" href="assets/css/_fonts.css">
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/quote-press.css">
 		<script src="assets/js/main.js"></script>
+		<script src="assets/js/quote-press.js"></script>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-R6H0WBC5S4"></script>
@@ -32,6 +34,7 @@
   		gtag('config', 'G-R6H0WBC5S4');
 		</script>
 	</head>
+
 
 
 	<body>
@@ -196,26 +199,42 @@
 		<!-- IMPORTANT SECTION STARTS HERE -->
 		<section class="important">
 		   <div class="info-1">
-				<h1>WHAT THE CLIENT SAID:</h1>
+				<h1>WORK WITH ME</h1>
 		  		<p>
-				"Professional, well-prepared, and top-notch quality. After being recommended by my colleague, I am truly grateful to work with Alma because there is no need to look for anyone again to produce all the branding and design work. Her knowledge, combined with her enthusiasm makes it for a working relationship second to none. As we gained clarity for our brand, Alma also guided us to our targeted-customer. She will take feedback and apply it into her design in order to produce the best possible creative for the job. Her creative know-how and design experience would be valuable assets to any team.”<br><br>
-		        Genji Coffee, Indonesia
+						I’m always happy to discuss future work opportunity to help you transform your
+		        brand. Let’s collaborate. Available Monday-Friday. If you’re a future client looking to know more about my design processes or
+		        my expanded portfolio, please drop me a message
+		        <a href="contact.html" target="blank">here.</a>
 		  		</p>
 		  </div>
 		  
 		  <div class="press-1">
-				<h1>PRESS:</h1>
-		  		<p>
-		   			<a href="https://thedesignkids.org/interviews/alma-santang/?utm_campaign=later-linkinbio-thedesignkids&utm_content=later5962882&utm_medium=social&utm_source=instagram" target="blank">TDK Awards Winner 2020 Interview</a>
-		        	<br><br>
-		        	“It feels like Alma is pushing some design boundaries, which really excites me
-		        to see what is yet to come. Her ‘Museum of the Invisible’ project is amazing —
-		        the consideration of type, image treatments and colour palette, really makes you
-		        connect to the story behind it. All of her projects have an awesome meshing of
-		        styles which really makes them stand out from the norm.”<br><br>
-		        Paul McKie from @autumn.studio, Brisbane
-		    </p>
-		 </div>
+		  	<h1>INTERVIEW & RECOMMENDATIONS</h1>
+			<div class="slider">
+  <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
+  <input type="radio" name="slider" title="slide2" class="slider__nav"/>
+  <input type="radio" name="slider" title="slide3" class="slider__nav"/>
+  <input type="radio" name="slider" title="slide4" class="slider__nav"/>
+  <div class="slider__inner">
+    <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
+      <h2 class="slider__caption">codepen</h2>
+      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+    </div>
+    <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
+      <h2 class="slider__caption">newspaper-o</h2>
+      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+    </div>
+    <div class="slider__contents"><i class="slider__image fa fa-television"></i>
+      <h2 class="slider__caption">television</h2>
+      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+    </div>
+    <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
+      <h2 class="slider__caption">diamond</h2>
+      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+    </div>
+  </div>
+</div>
+</div>
 		</section>
 		<!-- IMPORTANT SECTION ENDS HERE -->
 		
@@ -240,9 +259,7 @@
 		  <div class="end-promo">
 		    <p>
 		      I’m always happy to discuss future work opportunity to help you transform your
-		        brand. Let’s collaborate. Available Monday-Friday. If you’re a future client looking to know more about my design processes or
-		        my expanded portfolio, please drop me a message
-		        <a href="contact.html" target="blank">here.
+		      brand. Let’s collaborate. Available Monday-Friday. <br>(The projects shown are selected projects only)
 		    </p>
 		  </div>
 		  
@@ -294,6 +311,10 @@
 		  x[slideIndex[no]-1].style.display = "block";  
 		};
 		// IMAGE SLIDESHOW
+
+
+
+
 		</script>
 	</body>
 </html>
