--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		  </div>
 		  
 		  <div class="social">
-		    <a href="mailto:almasantang@gmail.com" class="social-link" target="blank">Email</a>
+		    <a href="mailto:alma@byfullcircle.com" class="social-link" target="blank">Email</a>
 		    <a href="https://www.instagram.com/almasantang" class="social-link" target="blank">Instagram</a>
 		    <a href="https://www.linkedin.com/in/almasantang/" class="social-link" target="blank">LinkedIn</a>
 		    <p>
@@ -260,7 +260,7 @@
 
 
 		<footer>
-		   © 2021 Alma Santang. All rights reserved.
+		   © 2022 Alma Santang. All rights reserved.
 		  <br>
 		  Website designed & developed by Alma Santang.
 		  <br>
